add textarea, radio component

--- a/src/app/components/textarea/textarea.component.html
+++ b/src/app/components/textarea/textarea.component.html
@@ -1,7 +1,7 @@
-<h4>Text</h4>
+<h4>Textarea</h4>
 <form [formGroup]="form">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Name" formControlName="name">
+    <textarea matInput placeholder="Name" formControlName="name"></textarea>
   </mat-form-field>
 </form>
 
