organize import module

--- a/src/app/components/checkbox/checkbox.component.html
+++ b/src/app/components/checkbox/checkbox.component.html
@@ -1,3 +1,4 @@
+<h4>Checkbox</h4>
 <form [formGroup]="form">
   <div *ngFor="let food of foods; let i = index">
     <mat-checkbox [value]="food.checked" (change)="food.checked = !food.checked">
