--- a/src/app/components/radio/radio.component.html
+++ b/src/app/components/radio/radio.component.html
@@ -1,3 +1,4 @@
+<h4>Radio</h4>
 <form [formGroup]="form">
   <mat-radio-group class="radio-button-new-line" formControlName="food">
     <mat-radio-button *ngFor="let food of foods" [value]="food">
